
- revised UINT128 declaration that causes gcc 3.4.3 compiler
to hang on 64 bit machines.

----------
spartha1    Date: Fri Jun 29 16:39:54 EDT 2007  CSN: CSN-asimcore-150
                  Fri Jun 29 20:39:54 UTC 2007


Directory modules/power_model
 null_power_model.h        Locally Modified          149 

Updating with simcore changes (rev. 2377 - Sari Coumeri)

* Added empty bus power macro calls to null_power_model (SLC)

----------
spartha1    Date: Fri Jun 29 16:41:17 EDT 2007  CSN: CSN-asimcore-151
                  Fri Jun 29 20:41:17 UTC 2007


Directory tools/scripts
 regression.verifier       Locally Modified          150 

Updating with simcore changes (rev. 2378 - Krishna Rangan)

- check for a failure file prior to a check for submitted failure; this
would fix an apparent failure in the regressions, that was missed by verifier.


----------
spartha1    Date: Fri Jun 29 16:43:07 EDT 2007  CSN: CSN-asimcore-152
                  Fri Jun 29 20:43:07 UTC 2007


Directory lib/libasim/include/asim
 mm.h                      Locally Modified          151 

Updating with simcore changes (rev. 2379 - Carl Beckmann)

- removed unnecessary freelist locks, and added a debug option to poison
smart pointer memory after deleting it.

----------
spartha1    Date: Fri Jun 29 16:44:35 EDT 2007  CSN: CSN-asimcore-153
                  Fri Jun 29 20:44:35 UTC 2007


Directory lib/libasim/include/asim
 mm.h                      Locally Modified          152 

Updating with simcore changes (rev. 2380 - Carl Beckmann)

- Fixed a race condition between pre-allocate and operator new in MM pointers,
that showed up in the multithreaded runs.

----------
spartha1    Date: Fri Jun 29 16:45:57 EDT 2007  CSN: CSN-asimcore-154
                  Fri Jun 29 20:45:57 UTC 2007


Directory lib/libasim/include/asim
 cache.h                   Locally Modified          153 

Updating with simcore changes (rev. 2381 - Carl Beckmann)

- fix for LRU update (provided by Drew Hilton)